2004-12-08  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-gst.c: (player_set_file), (player_stop),
	(player_pause):

	Feeble attempt at making the gst backend a bit more responsive. 
	Marginal difference.

2004-12-04  Sigurd Gartmann  <sigurd-translate@brogar.org>

	* configure.in: Added "nb" to ALL_LINGUAS.

2004-11-30  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in: Added "lt" to ALL_LINGUAS.

2004-11-23  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_is_last):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Scroll to last row when DND-reordering a row to be the last one.

2004-11-23  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up external file DND.

2004-11-20  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-model.c:
	(pointer_list_model_row_draggable), (put_before),
	(pointer_list_model_insert), (pointer_list_model_has_first):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_class_init),
	(pointer_list_view_init), (pointer_list_view_insert),
	(pointer_list_view_is_first), (pointer_list_view_select):
	* libmuine/pointer-list-view.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/CoverImage.cs:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:
	* src/StringUtils.cs:

	DND support all over the place. Inspired by a patch by
	Sean Egan <seanegan@gmail.com>.

2004-11-18  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:

	Use new stock icon names.

2004-11-18  Jorn Baayen  <jbaayen@gnome.org>

	* data/images/Makefile.am:
	* data/images/muine-add-album-16.png:
	* data/images/muine-add-album.png:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	* src/StockIcons.cs:

	Use gnome-dev-cdrom-audio stock icon.

2004-11-17  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Depend on gnome-icon-theme.

2004-11-17  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
